--- a/drink-worthy-data.ipynb
+++ b/drink-worthy-data.ipynb
@@ -213,7 +213,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots(1, 3, sharey=True, figsize=(12, 4))\n",
+    "ax[0].hist(Demand)\n",
+    "ax[0].set_title('Demand Distribution') \n",
+    "ax[0].set_ylabel('Frequency')\n",
+    "ax[0].set_xlabel('Demand')\n",
+    "ax[1].hist(DemandPctChange)\n",
+    "ax[1].set_title('% Change Distribution') \n",
+    "ax[1].set_xlabel('Demand % Change')\n",
+    "ax[2].hist(LogDemandDiff)\n",
+    "ax[2].set_title('Log Diff Distribution') \n",
+    "ax[2].set_xlabel('Demand Log Diff')\n",
+    "fig.tight_layout()\n",
+    "fig.savefig('./img/demand_hist.png')"
+   ]
   }
  ],
  "metadata": {
